# ChangeLog for dev-java/jlex
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/jlex/ChangeLog,v 1.15 2007/06/17 13:13:05 caster Exp $

  17 Jun 2007; Vlastimil Babka <caster@gentoo.org> -jlex-1.2.6.ebuild:
  Remove gen-1 revision.

  17 Jun 2007; Christian Faulhammer <opfer@gentoo.org> jlex-1.2.6-r1.ebuild:
  stable x86, bug 182030

  15 Jun 2007; Christoph Mende <angelos@gentoo.org> jlex-1.2.6-r1.ebuild:
  Stable on amd64 wrt bug 182030

  14 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  jlex-1.2.6-r1.ebuild:
  ppc stable, bug #182030

  14 Jun 2007; Petteri Räty <betelgeuse@gentoo.org> jlex-1.2.6-r1.ebuild:
  Use JAVA_PKG_IUSE.

*jlex-1.2.6-r1 (30 Jan 2007)

  30 Jan 2007; Miroslav Šulc <fordfrog@gentoo.org> +jlex-1.2.6-r1.ebuild:
  Migrated and improved (added source USE flag) by Alistair Bush
  <alistair.bush@gmail.com>, I did just minor corrections to the ebuild.

  05 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org> jlex-1.2.6.ebuild:
  Dropping sparc keywords, see #96229

  22 Apr 2005; Simon Stelling <blubb@gentoo.org> jlex-1.2.6.ebuild:
  stable on amd64

  20 Jan 2005; Jan Brinkmann <luckyduck@gentoo.org> jlex-1.2.6.ebuild:
  added missing jikes dependency.

  22 Oct 2004; Dylan Carlson <absinthe@gentoo.org> jlex-1.2.6.ebuild:
  Keywords ~amd64.

  30 Apr 2004; Chris Aniszczyk <zx@gentoo.org> jlex-1.2.6.ebuild:
  Bug Fix #48980

  10 Feb 2004; Adrian Almenar <strider@gentoo.org> jlex-1.2.6.ebuild:
  Removed alpha keyword.

  17 Jan 2004; Adrian Almenar <strider@gentoo.org> jlex-1.2.6.ebuild:
  Removed arch where java support its not available.

*jlex-1.2.6 (14 May 2003)

  14 May 2003; Dylan Carlson <absinthe@gentoo.org> jlex-1.2.6.ebuild:
  Initial import.
