@@ -1,4 +1,5 @@
 DIST jlex-1.2.6.tar.bz2 45868 SHA256 8367edecc3f31f0f55d6b1d92146d6ca9eeaf76de5eb0ff8614a0a2e38e4a2b5 SHA512 ebe16f87fe5b524de5c31651b0d5a0c282fdac99814c8f432a850a394657da4016880fba0f7418c8c42a989e78145d39188c3e68b79ed64fa1911d5680b00b9c WHIRLPOOL 43c51ca8b3ce452329bc7681f34bfb7304a0c9f6f2bf1d83eb8d048bed8863d7f037c38444146234160345692bcd3a3838279ffe7746e3919c37710edf156d9f
 EBUILD jlex-1.2.6-r1.ebuild 869 SHA256 97aa8d0c6c72a3bfb17af699ad9e363aba9f0e0e9fc35d4fbffb7523ca43c8ea SHA512 4d7e5f101359f66913f4a869629d9cfb12a0ff4c1fd91ce170dafff1b1d13088e597cfdd40b152f7491c5816c8e23a18c57c129f10d16009732f8adc4c4e10d7 WHIRLPOOL 27751b6d0fbb00dd155df3a568d9f92b79cf40c5f341a44f29647780fc5889712834cba9daeb4acb0fd04a5ba17dcc20e908aa8c43631e51954c884e6b3ab8d2
-MISC ChangeLog 1771 SHA256 6e52b59ed08df8ff7f6a7f6b88da907088a9556378b85e7ec259193771f4a1a8 SHA512 159af2c2657907673f2babc1c3562296a86416c2def84bfdf12fb9a187740ef2408dcc9245e3c9d9e84c0a295c9b05d257a56ef26eee2f241c110cf7e2e67915 WHIRLPOOL ddf795735d226ef66b55e2cd0fa421f1e403af54595311c71cfe4ed65f5e7461c1a9a9c81e8cf83ad9913d1214eed593526bb2d5d31734bc66065eeadb0f9d99
+EBUILD jlex-1.2.6-r2.ebuild 935 SHA256 583a663cec62097119c97819c6ec7420791ad5f8cfd75b007b1a4f0d4b05579c SHA512 1684d75bfdf41b600a8b5f80bc6f5e17281e9faf3fccd9002aa906fe72cbd11106c3ff0fd2ff4d6e2b8f16e37e9b4313d8389f894333660ae21ab18f77f0235d WHIRLPOOL 63a634075b7ae948eaf8d6ebf421a70d85e57f535894bbf5c7c0a39ac7a0c52f3247c561effc6d322a3f8073547e0efaf56db130c1a3f7cb477f37bb2f3ac2d5
+MISC ChangeLog 1955 SHA256 cfb8711b5f6c95d4f5fac74f77ed06f632091897d5fe013145f840ef0357afd1 SHA512 31f60fd58162fa0cacf68d25632a550322ff5d1681e5f56f4382e817bce12cd2ab96fdccf06e4fcda206ff7cede23bdcde9db6ee2e6b27d122e9f985b38c799c WHIRLPOOL 507cd90cf32f65dedb7fdcc1b1963715308ce7c65aecaeb9be7e45550d9e201311eca5fcfae19cdfdb3b57397a4caff0798bb340bcd5f9a824c1d432444db079
 MISC metadata.xml 157 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9 SHA512 bbae663e26f48fdc5e272adc2b06c14f77f34c53caf84acb53908ff036e7c12a3edbbc0929d2db56bee861a453381d979c7e0983a23716f629ed2135c22ffece WHIRLPOOL 887e153e2481e7d76f0f1b67a395f10f0328b93930185ecdb8fcb5fe3c50f839086a18831d61cf45b34657aaffca6c3b7900cf3c04b712846a05027a84602448
