@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile install preinst prepare setup
+DEPEND=>=virtual/jdk-1.4 >=dev-java/java-config-2.1.9-r1 source? ( app-arch/zip )
+DESCRIPTION=JLex: a lexical analyzer generator for Java
+EAPI=5
+HOMEPAGE=http://www.cs.princeton.edu/~appel/modern/java/JLex/
+IUSE=elibc_FreeBSD doc source
+KEYWORDS=~amd64 ~ppc ~x86
+LICENSE=jlex
+RDEPEND=>=virtual/jre-1.4 >=dev-java/java-config-2.1.9-r1 source? ( app-arch/zip )
+SLOT=0
+SRC_URI=mirror://gentoo/jlex-1.2.6.tar.bz2
+_eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	java-pkg-2	65bbb59987d777c1106ae8aa4bf36e7b	java-utils-2	f02d3e4777b404c719a5a6479c37c6e3	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	versionator	cd0bcdb170807e4a1984115e9d53a26f
+_md5_=8dc4488cfdc8487ec1f0bbada9691105
