@@ -1,0 +1,12 @@
+DEFINED_PHASES=install postinst
+DESCRIPTION=Intelligent Python IDE with unique code assistance and analysis
+EAPI=5
+HOMEPAGE=http://www.jetbrains.com/pycharm/
+KEYWORDS=~amd64
+LICENSE=Apache-2.0 BSD CDDL MIT-with-advertising
+RDEPEND=>=virtual/jre-1.6
+RESTRICT=mirror strip
+SLOT=0
+SRC_URI=https://download.jetbrains.com/python/pycharm-community-4.0.4.tar.gz
+_eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	readme.gentoo	106edea5533517715013de909a333abd	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
+_md5_=52af98cc02cceaeb55cfa7dac153cdc3
