@@ -1,6 +1,11 @@
 # ChangeLog for dev-util/pycharm-community
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/pycharm-community/ChangeLog,v 1.2 2014/09/14 16:10:22 xmw Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-util/pycharm-community/ChangeLog,v 1.3 2015/02/24 12:59:38 xmw Exp $
+
+*pycharm-community-4.0.4 (24 Feb 2015)
+
+  24 Feb 2015; Michael Weber <xmw@gentoo.org> +pycharm-community-4.0.4.ebuild:
+  Version bump (bug 531236).
 
 *pycharm-community-3.4.1 (14 Sep 2014)
 
