@@ -1,6 +1,11 @@
 # ChangeLog for dev-java/jlex
-# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/jlex/ChangeLog,v 1.15 2007/06/17 13:13:05 caster Exp $
+# Copyright 2000-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-java/jlex/ChangeLog,v 1.16 2015/02/24 12:36:37 fordfrog Exp $
+
+*jlex-1.2.6-r2 (24 Feb 2015)
+
+  24 Feb 2015; Miroslav Šulc <fordfrog@gentoo.org> +jlex-1.2.6-r2.ebuild:
+  added launcher (bug #442334, patch by Florian Schmaus <flo@geekplace.eu>)
 
   17 Jun 2007; Vlastimil Babka <caster@gentoo.org> -jlex-1.2.6.ebuild:
   Remove gen-1 revision.
